--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-     <!-- Create the navbar -->
+     <!-- Create the navbar .......-->
      <nav class="navbar navbar-expand-lg navbar-default">
         <!-- Container inside the navbar header to span the page -->
         <div class="container-fluid">
