--- a/Maps.html
+++ b/Maps.html
@@ -85,7 +85,7 @@
             { title: "Watercolor Map of Penang", image: "assets/PenangWatercolor.png", link: "portfolio/Penang.html" },
             { title: "Summiting Tahawus", image: "assets/Tahawus.png", link: "portfolio/Tahawus.html" },
             { title: "Daylight Across America", image: "assets/TimeZones.png", link: "portfolio/Daylight.html" },
-            { title: "Knobstone Creek Through Hike", image: "assets/Knobstone.png", link: "portfolio/Knobstone.html" },
+            { title: "Knobstone Creek Thru-Hike", image: "assets/Knobstone.png", link: "portfolio/Knobstone.html" },
             { title: "The Great Range", image: "assets/GreatRange.png", link: "portfolio/GreatRange.html" },
             { title: "American Climate Change Survey", image: "assets/ClimateChange.png", link: "portfolio/ClimateChange.html" },
         ];
