--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <a href="Maps.html" class="btn btn-primary btn-lg mx-2">
             <i class="fas fa-map"></i> View Maps
         </a>
-        <a href="Photos.html" class="btn btn-primary btn-lg mx-2">
+        <a href="photos.html" class="btn btn-primary btn-lg mx-2">
             <i class="fas fa-camera"></i> View Photos
         </a>
     </div>
