cover photo credits added

--- a/about.html
+++ b/about.html
@@ -135,9 +135,13 @@
             </div>
         </div>
         <p class="text-muted" style="margin-top:0px">Copyright © 2024 Joseph Willman. <span
-                class="line-break"></span>All
-            rights reserved.
-        </p>
+            class="line-break"></span>All
+        rights reserved.
+    </p>
+    <p class="text-muted" style="margin-top:0px">Cover photo by Nancie Battaglia, courtesy of Adirondack Land Trust <span
+        class="line-break"></span>
+</p>
+        
         <img src="assets/logo.png" alt="logo" height="75px" style="margin-top:10px">
         <br><br>
         <div style="display:none">
