--- a/photos.html
+++ b/photos.html
@@ -157,6 +157,7 @@
                         </li>
                     </ul>
                     <p class="text-muted">Copyright © 2024 Joseph Willman. All rights reserved.</p>
+                    <p class="text-muted">Cover photo by Nancie Battaglia, courtesy of Adirondack Land Trust</p>
                     <img src="assets/logo.png" alt="logo" height="75px" style="margin-top:10px">
                 </div>
             </div>
