--- a/Maps.html
+++ b/Maps.html
@@ -60,7 +60,13 @@
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/joseph-willman-56696a206/"><i class="fab fa-linkedin-in"></i></a></li>
                         <li class="list-inline-item"><a href="https://www.instagram.com/joeywillman/"><i class="fab fa-instagram"></i></a></li>
                     </ul>
-                    <p class="text-muted">Copyright © 2024 Joseph Willman. All rights reserved.</p>
+                    <p class="text-muted" style="margin-top:0px">Copyright © 2024 Joseph Willman. <span
+                        class="line-break"></span>All
+                    rights reserved.
+                </p>
+                <p class="text-muted" style="margin-top:0px">Cover photo by Nancie Battaglia, courtesy of Adirondack Land Trust <span
+                    class="line-break"></span>
+            </p>
                     <img src="assets/logo.png" alt="logo" height="75px" style="margin-top:10px">
                 </div>
             </div>
