--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
                     class="line-break"></span>All
                 rights reserved.
             </p>
+            <p class="text-muted" style="margin-top:0px">Cover photo by Nancie Battaglia, courtesy of Adirondack Land Trust <span
+                class="line-break"></span>
+        </p>
             <img src="assets/logo.png" alt="logo" height="75px" style="margin-top:10px">
             <br><br>
             <div style="display:none">
