--- a/Maps.html
+++ b/Maps.html
@@ -79,6 +79,9 @@
     <script>
         // Card data for simplicity
         const mapData = [
+            { title: "Great Wisconsin Birding and Nature Trail Interactive Map", image: "assets/GWBNT-thumbnail.png", link: "portfolio/GWBNT.html" },
+            { title: "Wisconsin Accessible Birding Atlas", image: "assets/WABA-thumbnail.png", link: "portfolio/WABA.html" },
+            { title: "Coordinated Visualization Map", image: "assets/CoordinatedClimate.png", link: "portfolio/CoordinatedClimate.html" },
             { title: "Green Space in Chicago Storymap", image: "assets/StoryMap-thumbnail.png", link: "portfolio/StoryMap.html" },
             { title: "Medieval Basemap", image: "assets/ScrollMap-Thumbnail.png", link: "portfolio/ScrollMap.html" },
             { title: "Lakeshore Nature Preserve Birding Tour", image: "assets/BirdingTour-Thumbnail.png", link: "portfolio/BirdingTour.html" },
