--- a/Resume.html
+++ b/Resume.html
@@ -74,12 +74,12 @@
                 <h4>University of Wisconsin-Madison</h4>
                 <ul>
                     <li>B.S. Forest and Wildlife Ecology, graduated May 2024</li>
-                    <li>M.S. Cartography GIS, expected graduation May 2025</li>
+                    <li>M.S. Cartography GIS, graduated May 2025</li>
                 </ul>
                 <hr>
                 <h3>Technical Skills</h3>
                 <p>
-                    ArcGIS Pro | ArcGIS Online | Illustrator | Mapbox Studio | Python | CSS | HTML
+                    ArcGIS Pro | ArcGIS Online | Adobe Illustrator | Mapbox Studio | Python | CSS | HTML | Javascript | Leaflet | D3 | Bootstrap
                 </p>
                 <hr>
                 <h3>Experience</h3>
@@ -122,8 +122,32 @@
                     <li>Successfully completed an independent research project on anti-predatory behavior in white-tailed deer and 
                         presented findings at the undergraduate research symposium  </li>  
                 </ul>
+            </ul>
+            <h4>Pine View Wildlife Rehabilitation Center, Summer 2022</h4>
+            <ul>
+                <li>Provided care for a diverse range of mammals, birds, and reptiles, including endangered species, prioritizing their 
+                    medical needs, and ensuring their well-being </li>
+                <li>Developed expertise in diagnosing and treating common wildlife diseases and parasites, gaining valuable hands-on 
+                    experience in the field of wildlife rehabilitation  </li>
+                <li>Utilized anatomical knowledge and epidemiological insights to perform necropsies on deceased animals, 
+                    contributing to a greater understanding of wildlife anatomy and disease patterns   </li>  
+            </ul>
+        </ul>
+        <h4>Wisconsin National Primate Research Center, April-May 2021</h4>
+        <ul>
+            <li>Cleaned and disinfected enclosures and performed other custodial duties such as cleaning tools and equipment  </li>
+            <li>Fed and conducted routine maintenance checks and inspections of 50+ primate enclosures  </li>
+            <li>Created and organized enrichment items and toys for the entire primate center to increase quality of life </li>  
+            <li>Administered shots and performed routine check-ups on primates </li>  
+            <li>Implemented improvements to enclosures to enhance safety and improve quality of life </li>  
+        </ul>
                 <hr>
                             <h3>Leadship and Volunteering</h3>
+                <h4>Lumberjacks RFC, Summer 2022 - Present</h4>
+                 <ul>
+                    <li>Assist with the creation of the club and the 501c7 application process</li>
+                    <li>Organize marketing,recruiting, merchandise, and events for the club</li>
+                </ul>
                 <h4>UW-Madison Men's Rugby Club, Spring 2021 - Spring 2025</h4>
                 <ul>
                     <li>Played on a competitive team in the Big 10 Rugby Conference at the highest collegiate level</li>
