--- a/about.html
+++ b/about.html
@@ -71,7 +71,11 @@
             <!-- Text Section -->
             <div class="col-md-9 col-sm-8 col-xs-12">
                 <p>
-                    Hello, I'm Joey, a passionate cartographer and conservationist based in Madison, Wisconsin. I received my B.S. in Wildlife Ecology from UW-Madison and am currently pursuing my M.S. in Cartography and GIS. I specialize in crafting visually engaging and data-driven maps that tell stories of our natural world. Professionally, I've gained experience as a field researcher, naturalist, land steward, and GIS technician, blending hands-on environmental work with cartographic visualization and geospatial science. You can read more about my work experience <a
+                    Hello, I'm Joey, a passionate cartographer and conservationist based in Madison, Wisconsin. I hold a B.S. in Wildlife Ecology and an M.S. in Cartography and GIS, both from the University of Wisconsin–Madison.
+
+                    I specialize in creating visually engaging, data-driven maps that tell the stories of our natural world. My professional background blends hands-on environmental work with cartographic visualization and geospatial analysis, drawing on experience as a field researcher, naturalist, land steward, and GIS technician.
+                    
+                    You can read more about my work experience <a
                     href="resume.html">here.</a>
                 </p>
                 <p>
