--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
     <div class="jumbotron">
         <div class="container">
             <h2>Joseph Willman | Cartographer</h2>
-            <p>M.S. Student in Cartography and GIS at UW-Madison</p>
             <img src="assets/logo.png" alt="Logo" class="jumbotron-logo">
         </div>
     </div>
@@ -93,22 +92,22 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <a href="portfolio/StoryMap.html">
-                        <img class="card-img-top" src="assets/StoryMap-thumbnail.png" alt="Unequal Green Space in Chicago Storymap">
+                    <a href="portfolio/WABA.html">
+                        <img class="card-img-top" src="assets/WABA-thumbnail.png" alt="Wisconsin Accessible Birding Atlas">
                     </a>
                     <div class="card-body">
-                        <h4 class="card-title">Green Space in Chicago Storymap</h4>
-                        <a href="portfolio/StoryMap.html" class="btn btn-primary">See Detail</a>
+                        <h4 class="card-title">Wisconsin Accessible Birding Atlas</h4>
+                        <a href="portfolio/WABA.html" class="btn btn-primary">See Detail</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <a href="portfolio/ScrollMap.html">
-                        <img class="card-img-top" src="assets/ScrollMap-Thumbnail.png" alt="Medieval Scrollmap">
+                    <a href="portfolio/GWBNT.html">
+                        <img class="card-img-top" src="assets/GWBNT-thumbnail.png" alt="Great Wisconsin Birding and Nature Trail">
                     </a>
                     <div class="card-body">
-                        <h4 class="card-title">Medieval Basemap</h4>
+                        <h4 class="card-title">Great Wisconsin Birding and Nature Trail</h4>
                         <a href="portfolio/ScrollMap.html" class="btn btn-primary">See Detail</a>
                     </div>
                 </div>
