--- a/Maps.html
+++ b/Maps.html
@@ -79,6 +79,7 @@
     <script>
         // Card data for simplicity
         const mapData = [
+            { title: "Ozaukee Interurban Bike Trail Birding Guide Interactive Map", image: "assets/interurbantrailguide.png", link: "portfolio/interurbantrail.html" },
             { title: "Great Wisconsin Birding and Nature Trail Interactive Map", image: "assets/GWBNT-thumbnail.png", link: "portfolio/GWBNT.html" },
             { title: "Wisconsin Accessible Birding Atlas", image: "assets/WABA-thumbnail.png", link: "portfolio/WABA.html" },
             { title: "Coordinated Visualization Map", image: "assets/CoordinatedClimate.png", link: "portfolio/CoordinatedClimate.html" },
