--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <a href="portfolio/WABA.html">
-                        <img class="card-img-top" src="assets/WABA-thumbnail.png" alt="Wisconsin Accessible Birding Atlas">
+                    <a href="portfolio/interurbantrail.html">
+                        <img class="card-img-top" src="assets/interurbantrailguide.png" alt="Ozaukee Interurban Trail Birding Guide Interactive Map">
                     </a>
                     <div class="card-body">
-                        <h4 class="card-title">Wisconsin Accessible Birding Atlas</h4>
-                        <a href="portfolio/WABA.html" class="btn btn-primary">See Detail</a>
+                        <h4 class="card-title">Ozaukee Interurban Trail Birding Guide Interactive Map</h4>
+                        <a href="portfolio/interurbantrail.html" class="btn btn-primary">See Detail</a>
                     </div>
                 </div>
             </div>
