--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </a>
                     <div class="card-body">
                         <h4 class="card-title">Great Wisconsin Birding and Nature Trail</h4>
-                        <a href="portfolio/ScrollMap.html" class="btn btn-primary">See Detail</a>
+                        <a href="portfolio/GWBNT.html" class="btn btn-primary">See Detail</a>
                     </div>
                 </div>
             </div>
