--- a/about.html
+++ b/about.html
@@ -38,19 +38,19 @@
                 <!-- Unordered list for links on navbar -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                   <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Maps.html">Maps</a>
+                       <a class="nav-link" href="Maps.html">Maps</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="photos.html">Photos</a>
+                       <a class="nav-link" href="photos.html">Photos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Resume.html">Resume</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link active" aria-current="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -97,67 +97,20 @@
     <script type="text/javascript" src="lib/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap.min.js"></script>
 <!-- Footer -->
-<footer class="footer">
-
+  <footer class="footer">
     <div class="container">
-        <div class="row">
-            <div class="col-md-2">
-            </div>
-            <div class="col-md-8">
-                <ul class="list-inline social-buttons">
-
-                    <li class="list-inline-item">
-                        <a href="mailto:jgwillman@wisc.edu" target="_blank">
-                            <i class="fa fa-envelope"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://github.com/JoeyWillman" target="_blank">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://x.com/WillmanCarto" target="_blank">
-                            <i class="fab fa-x-twitter"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.linkedin.com/in/joseph-willman-56696a206/" target="_blank">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                    </li>
-                    <span class="line-break"></span>
-                    <li class="list-inline-item">
-                        <a href="https://www.instagram.com/joeywillman/" target="_blank">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </li>
-                    <p></p>
-                </ul>
-            </div>
-            <div class="col-md-2">
-            </div>
-        </div>
-        <p class="text-muted" style="margin-top:0px">Copyright © 2024 Joseph Willman. <span
-            class="line-break"></span>All
-        rights reserved.
-    </p>
-    <p class="text-muted" style="margin-top:0px">Cover photo by Nancie Battaglia, courtesy of Adirondack Land Trust <span
-        class="line-break"></span>
-</p>
-        
-        <img src="assets/logo.png" alt="logo" height="75px" style="margin-top:10px">
-        <br><br>
-        <div style="display:none">
-            <script type="text/javascript"
-                src="//rf.revolvermaps.com/0/0/3.js?i=5s1xl9ki8ik&amp;b=0&amp;s=40&amp;m=0&amp;cl=333333&amp;co=000000&amp;cd=cfcfcf&amp;v0=100&amp;v1=0&amp;r=0"
-                async="async"></script>
-            <script type='text/javascript' id='mapmyvisitors'
-                src='https://mapmyvisitors.com/map.js?cl=829b3f&w=150&t=n&d=ukSsjGdcShOQmlteFQf1g39TecSrYk58qZKTwcbeU54&co=212529&cmo=3d3d3d&cmn=bababa&ct=ffffff'>
-                </script>
-        </div>
+      <ul class="list-inline social-buttons mb-3">
+        <li class="list-inline-item"><a href="mailto:jgwillman@wisc.edu" target="_blank"><i class="fa fa-envelope"></i></a></li>
+        <li class="list-inline-item"><a href="https://github.com/JoeyWillman" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li class="list-inline-item"><a href="https://x.com/WillmanCarto" target="_blank"><i class="fab fa-x-twitter"></i></a></li>
+        <li class="list-inline-item"><a href="https://www.linkedin.com/in/joseph-willman-56696a206/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+        <li class="list-inline-item"><a href="https://www.instagram.com/joeywillman/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+      <p>Cover photo by Nancie Battaglia, courtesy of Adirondack Land Trust</p>
+      <p>Copyright © 2024 Joseph Willman. All rights reserved.</p>
+      <img src="assets/logo.png" alt="logo" />
     </div>
-</footer>
+  </footer>
 
 
 </body>
