--- a/index.html
+++ b/index.html
@@ -2,216 +2,123 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="maps, cartography" />
-    <title>Joseph Willman</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="keywords" content="maps, cartography, GIS, Joseph Willman, map design" />
+  <title>Joseph Willman | Cartographer</title>
 
-    <!--put your Bootstrap stylesheet links below this comment and above style.css-->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+  <!-- Bootstrap & Styles -->
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;700&family=Roboto+Slab:ital,wght@0,400;0,700;1,400&display=swap"
-        rel="stylesheet">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/0b26d5bb90.js" crossorigin="anonymous"></script>
 
-    <!-- Fontawesome -->
-    <script src="https://kit.fontawesome.com/0b26d5bb90.js" crossorigin="anonymous"></script>
-
-    <!--put your external script links here-->
-    <script type="text/javascript" src="lib/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="lib/bootstrap.min.js"></script>
+ 
 </head>
 
 <body>
-    <!-- Create the navbar -->
-    <nav class="navbar navbar-expand-lg navbar-default">
-        <!-- Container inside the navbar header to span the page -->
-        <div class="container-fluid">
-            <!-- Creates the navbar header -->
-            <a class="navbar-brand" href="#">
-                <img src="assets/logo.png" alt="Logo" class="navbar-logo"> Joseph Willman
-            </a>
-            <!-- This complex script is just for a hamburger button, which will appear on smaller screens -->
-            <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                        d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-                </svg>
-                <span class="menu"> </span>
-            </button>
-            <!-- Links to include in navbar -->
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <!-- Unordered list for links on navbar -->
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Maps.html">Maps</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="photos.html">Photos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Resume.html">Resume</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div> <!-- end .navbar-collapse -->
-        </div> <!-- end .container-fluid -->
-    </nav> <!-- end navigation bar -->
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-default">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/logo.png" alt="Logo" class="navbar-logo" /> Joseph Willman
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="Maps.html">Maps</a></li>
+          <li class="nav-item"><a class="nav-link" href="photos.html">Photos</a></li>
+          <li class="nav-item"><a class="nav-link" href="Resume.html">Resume</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <div class="jumbotron">
-        <div class="container">
-            <h2>Joseph Willman | Cartographer</h2>
-            <img src="assets/logo.png" alt="Logo" class="jumbotron-logo">
-        </div>
-    </div>
-      <!--Buttons to view maps or photos-->
-      <div class="container text-center my-4">
-        <a href="Maps.html" class="btn btn-primary btn-lg mx-2">
-            <i class="fas fa-map"></i> View Maps
-        </a>
-        <a href="photos.html" class="btn btn-primary btn-lg mx-2">
-            <i class="fas fa-camera"></i> View Photos
-        </a>
-    </div>
-    
-    <div class="feautred-title-container text-center">
-        <h3 class="featured-title">Featured Projects</h3>
-    </div>
+  <!-- Hero -->
+  <div class="jumbotron">
+    <h1>Joseph Willman | Cartographer</h1>
+    <img src="assets/logo.png" alt="Logo" class="jumbotron-logo" />
+  </div>
+
+  <!-- CTA Buttons -->
+  <div class="cta-buttons">
+    <a href="Maps.html" class="btn btn-primary">
+      <i class="fas fa-map"></i> View Maps
+    </a>
+    <a href="photos.html" class="btn btn-primary">
+      <i class="fas fa-camera"></i> View Photos
+    </a>
+  </div>
+
+  <!-- Featured Projects -->
+  <section class="featured-section">
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <a href="portfolio/interurbantrail.html">
-                        <img class="card-img-top" src="assets/interurbantrailguide.png" alt="Ozaukee Interurban Trail Birding Guide Interactive Map">
-                    </a>
-                    <div class="card-body">
-                        <h4 class="card-title">Ozaukee Interurban Trail Birding Guide Interactive Map</h4>
-                        <a href="portfolio/interurbantrail.html" class="btn btn-primary">See Detail</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <a href="portfolio/GWBNT.html">
-                        <img class="card-img-top" src="assets/GWBNT-thumbnail.png" alt="Great Wisconsin Birding and Nature Trail">
-                    </a>
-                    <div class="card-body">
-                        <h4 class="card-title">Great Wisconsin Birding and Nature Trail</h4>
-                        <a href="portfolio/GWBNT.html" class="btn btn-primary">See Detail</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <a href="portfolio/BirdingTour.html">
-                        <img class="card-img-top" src="assets/BirdingTour-Thumbnail.png" alt="Lakeshore Nature Preserve Birding Tour">
-                    </a>
-                    <div class="card-body">
-                        <h4 class="card-title">Lakeshore Nature Preserve Birding Tour</h4>
-                        <a href="portfolio/BirdingTour.html" class="btn btn-primary">See Detail</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <h3 class="featured-title">Featured Projects</h3>
+      <div id="featuredGrid"></div>
     </div>
-    <div class="image-container bg-light text-center" style="padding:50px">
-        <h4>CONTACT ME</h4>
-        <div class="text-muted"><i>Feedback and inquiries are greatly appreciated!</i></div><br>
+  </section>
 
-        <form action="https://formspree.io/f/xjkvlkpb" method="POST">
-            <div class="form-group">
-                <div class="form-row">
-                    <div class="col form-col">
-                        <input type="name" name="name" class="form-control" placeholder="Name" required>
-                    </div>
-                    <div class="col form-col">
-                        <input type="email" name="email" class="form-control" placeholder="Email" required>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <textarea placeholder="Message" class="form-control" name="message" rows="8" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-xl btn-dark btn-block">SEND</button>
-        </form>
+  <!-- Contact Section -->
+  <section class="contact-section">
+    <h4>Contact Me</h4>
+    <p class="text-muted mb-4"><i>Feedback and inquiries are greatly appreciated!</i></p>
+    <form action="https://formspree.io/f/xjkvlkpb" method="POST">
+      <div class="mb-3">
+        <input type="text" name="name" class="form-control mb-3" placeholder="Name" required />
+        <input type="email" name="email" class="form-control mb-3" placeholder="Email" required />
+        <textarea name="message" class="form-control mb-3" rows="6" placeholder="Message" required></textarea>
+        <button type="submit" class="btn btn-dark w-100">Send</button>
+      </div>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <ul class="list-inline social-buttons mb-3">
+        <li class="list-inline-item"><a href="mailto:jgwillman@wisc.edu" target="_blank"><i class="fa fa-envelope"></i></a></li>
+        <li class="list-inline-item"><a href="https://github.com/JoeyWillman" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li class="list-inline-item"><a href="https://x.com/WillmanCarto" target="_blank"><i class="fab fa-x-twitter"></i></a></li>
+        <li class="list-inline-item"><a href="https://www.linkedin.com/in/joseph-willman-56696a206/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+        <li class="list-inline-item"><a href="https://www.instagram.com/joeywillman/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+      <p>Cover photo by Nancie Battaglia, courtesy of Adirondack Land Trust</p>
+      <p>Copyright © 2024 Joseph Willman. All rights reserved.</p>
+      <img src="assets/logo.png" alt="logo" />
     </div>
+  </footer>
 
-
-    <!-- Footer -->
-    <footer class="footer">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2">
-                </div>
-                <div class="col-md-8">
-                    <ul class="list-inline social-buttons">
-
-                        <li class="list-inline-item">
-                            <a href="mailto:jgwillman@wisc.edu" target="_blank">
-                                <i class="fa fa-envelope"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://github.com/JoeyWillman" target="_blank">
-                                <i class="fab fa-github"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://x.com/WillmanCarto" target="_blank">
-                                <i class="fab fa-x-twitter"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://www.linkedin.com/in/joseph-willman-56696a206/" target="_blank">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                        </li>
-                        <span class="line-break"></span>
-                        <li class="list-inline-item">
-                            <a href="https://www.instagram.com/joeywillman/" target="_blank">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        </li>
-                        <p></p>
-                    </ul>
-                </div>
-                <div class="col-md-2">
-                </div>
+  <!-- Scripts -->
+  <script src="lib/bootstrap.min.js"></script>
+  <script>
+    // Load featured projects (based on "featured": true)
+    fetch("data/projects.json")
+      .then((r) => r.json())
+      .then((projects) => {
+        const featured = projects.filter((p) => p.featured);
+        const grid = document.getElementById("featuredGrid");
+        grid.innerHTML = featured.map(p => `
+          <div class="featured-card">
+            <img src="${p.image}" alt="${p.title}">
+            <div class="featured-card-body">
+              <h4>${p.title}</h4>
             </div>
-            <p class="text-muted" style="margin-top:0px">Copyright © 2024 Joseph Willman. <span
-                    class="line-break"></span>All
-                rights reserved.
-            </p>
-            <p class="text-muted" style="margin-top:0px">Cover photo by Nancie Battaglia, courtesy of Adirondack Land Trust <span
-                class="line-break"></span>
-        </p>
-            <img src="assets/logo.png" alt="logo" height="75px" style="margin-top:10px">
-            <br><br>
-            <div style="display:none">
-                <script type="text/javascript"
-                    src="//rf.revolvermaps.com/0/0/3.js?i=5s1xl9ki8ik&amp;b=0&amp;s=40&amp;m=0&amp;cl=333333&amp;co=000000&amp;cd=cfcfcf&amp;v0=100&amp;v1=0&amp;r=0"
-                    async="async"></script>
-                <script type='text/javascript' id='mapmyvisitors'
-                    src='https://mapmyvisitors.com/map.js?cl=829b3f&w=150&t=n&d=ukSsjGdcShOQmlteFQf1g39TecSrYk58qZKTwcbeU54&co=212529&cmo=3d3d3d&cmn=bababa&ct=ffffff'>
-                    </script>
+            <div class="featured-card-footer">
+              <a href="Project.html?p=${p.slug}">See Detail</a>
             </div>
-        </div>
-    </footer>
-
+          </div>
+        `).join("");
+      })
+      .catch(err => console.error("Error loading featured projects:", err));
+  </script>
 </body>
-
-
-
 </html>
