--- a/photos.html
+++ b/photos.html
@@ -142,27 +142,21 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 offset-md-2 text-center">
-                    <ul class="list-inline social-buttons">
-                        <li class="list-inline-item"><a href="mailto:jgwillman@wisc.edu"><i class="fa fa-envelope"></i></a></li>
-                        <li class="list-inline-item"><a href="https://github.com/JoeyWillman"><i class="fab fa-github"></i></a></li>
-                        <li class="list-inline-item"><a href="https://x.com/WillmanCarto"><i class="fab fa-x-twitter"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/joseph-willman-56696a206/"><i
-                                    class="fab fa-linkedin-in"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.instagram.com/joeywillman/"><i class="fab fa-instagram"></i></a>
-                        </li>
-                    </ul>
-                    <p class="text-muted">Copyright © 2024 Joseph Willman. All rights reserved.</p>
-                    <p class="text-muted">Cover photo by Nancie Battaglia, courtesy of Adirondack Land Trust</p>
-                    <img src="assets/logo.png" alt="logo" height="75px" style="margin-top:10px">
-                </div>
-            </div>
-        </div>
-    </footer>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <ul class="list-inline social-buttons mb-3">
+        <li class="list-inline-item"><a href="mailto:jgwillman@wisc.edu" target="_blank"><i class="fa fa-envelope"></i></a></li>
+        <li class="list-inline-item"><a href="https://github.com/JoeyWillman" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li class="list-inline-item"><a href="https://x.com/WillmanCarto" target="_blank"><i class="fab fa-x-twitter"></i></a></li>
+        <li class="list-inline-item"><a href="https://www.linkedin.com/in/joseph-willman-56696a206/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+        <li class="list-inline-item"><a href="https://www.instagram.com/joeywillman/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+      <p>Cover photo by Nancie Battaglia, courtesy of Adirondack Land Trust</p>
+      <p>Copyright © 2024 Joseph Willman. All rights reserved.</p>
+      <img src="assets/logo.png" alt="logo" />
+    </div>
+  </footer>
 
     <!-- JavaScript -->
     <script type="text/javascript" src="lib/jquery-3.5.1.min.js"></script>
