--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                     I specialize in creating visually engaging, data-driven maps that tell the stories of our natural world. My professional background blends hands-on environmental work with cartographic visualization and geospatial analysis, drawing on experience as a field researcher, naturalist, land steward, and GIS technician.
                     
                     You can read more about my work experience <a
-                    href="resume.html">here.</a>
+                    href="Resume.html">here.</a>
                 </p>
                 <p>
                     In my free time, I love birding, wildlife photography, hiking, rugby, and traveling the world.
