--- a/Resume.html
+++ b/Resume.html
@@ -71,7 +71,7 @@
         <section aria-labelledby="skills">
           <h2 id="skills" class="h3">Technical Skills</h2>
           <p>
-            ArcGIS Pro | ArcGIS Online | Adobe Illustrator | Mapbox Studio | Python | CSS | HTML | Javascript | Leaflet | D3 | Bootstrap
+            ArcGIS Pro | ESRI Suite | Adobe Illustrator | Mapbox Studio | Python | CSS | HTML | Javascript | Leaflet | D3 | Bootstrap | Blender
           </p>
         </section>
 
@@ -81,15 +81,16 @@
         <section aria-labelledby="exp">
           <h2 id="exp" class="h3">Experience</h2>
 
-          <h3 class="h5 mt-3">Adirondack Land Trust, Summer 2024</h3>
+          <h3 class="h5 mt-3">Adirondack Land Trust, Summer 2024, May-July 2025</h3>
           <ul>
             <li>Executed stewardship activities at public facing and in-progress nature preserves, including trail maintenance, installation of trail markers, and posting property boundaries</li>
             <li>Designed and produced land management maps for preserves and current condition reports for conservation easements using ArcGIS Pro</li>
             <li>Conducted education and outreach at recreational sites, informing visitors about conservation work and the properties while gathering feedback to enhance public engagement</li>
             <li>Spearheaded a collaboration with BirdWeather to develop a procedure for bioacoustics stations to function in field environments without Wi-Fi; applied data science techniques to process and upload bird data to BirdWeather’s platform</li>
+            <li>Served as a temporary GIS contractor producing maps for preserve management, board comunnication, and donor outreach.</li>
           </ul>
 
-          <h3 class="h5 mt-3">United States Department of Agriculture, September 2023 - May 2024</h3>
+          <h3 class="h5 mt-3">United States Department of Agriculture - Rural Development, September 2023 - May 2024</h3>
           <ul>
             <li>Defined, developed, and launched public-facing geospatial maps to support USDA and agency-specific initiatives</li>
             <li>Worked with the USDA’s Rural Development team to review public-facing inventory of ArcGIS products for possible product refinement</li>
