--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="keywords" content="maps, cartography, GIS, Joseph Willman, map design" />
-  <title>Joseph Willman | Cartographer</title>
+  <title>Joseph Willman</title>
 
   <!-- Bootstrap & Styles -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
