--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- Hero -->
   <div class="jumbotron">
-    <h1>Joseph Willman | Cartographer</h1>
+    <h1>Joseph Willman</h1>
     <img src="assets/logo.png" alt="Logo" class="jumbotron-logo" />
   </div>
 
